buildscript {
    repositories {
        maven {
            url = "https://plugins.gradle.org/m2/"
        }
    }
    
    dependencies {
        classpath "com.gradle.publish:plugin-publish-plugin:2.1.1"
    }
}

plugins {
    id "io.freefair.lombok" version "9.5.0"
    id "com.github.ben-manes.versions" version "0.54.0"
    id "net.ltgt.errorprone" version "5.1.0"
}

apply plugin: "java-gradle-plugin"
apply plugin: "com.gradle.plugin-publish"
apply plugin: "jacoco"

group = "nl.colorize"
version = "2026.2"
compileJava.options.encoding = "UTF-8"

java {
    sourceCompatibility = "25"
    targetCompatibility = "25"
    sourceSets.main.java.srcDirs = ["source"]
    sourceSets.main.resources.srcDirs = ["resources"]
    sourceSets.test.java.srcDirs = ["test"]
}

repositories {
    mavenCentral()
}

dependencies {
    implementation gradleApi()
    implementation localGroovy()
    implementation files("lib/appbundler-1.0ea.jar")
    implementation "org.jsoup:jsoup:1.22.2"
    implementation "org.commonmark:commonmark:0.29.0"
    testImplementation "org.junit.jupiter:junit-jupiter:6.1.2"
    testImplementation "com.tngtech.archunit:archunit-junit5:1.4.2"
    testRuntimeOnly "org.junit.platform:junit-platform-launcher"
    errorprone "com.google.errorprone:error_prone_core:2.50.0"
}

jar {
    archiveFileName = "application-plugin.jar"
    duplicatesStrategy = DuplicatesStrategy.WARN
    exclude "**/module-info.class"
    exclude "**/META-INF/INDEX.LIST"
    exclude "**/META-INF/*.SF"
    exclude "**/META-INF/*.DSA"
    exclude "**/META-INF/*.RSA"

    from {
        configurations.runtimeClasspath
            .filter { it.toString().endsWith("appbundler-1.0ea.jar") }
            .collect { it.isDirectory() ? it : zipTree(it) }
    }
}

test {
    if (project.hasProperty("headless")) {
        exclude "**/macapplicationbundle/**", "**/windows/PackageWindowsExe*"
    }
}

test {
    useJUnitPlatform()
}

jacocoTestReport {
    afterEvaluate {
        classDirectories.from = files(classDirectories.files.collect {
            fileTree(dir: it, exclude: ["**/**Ext**"])
        })
    }
}

tasks.withType(JavaCompile).configureEach {
    options.errorprone.allErrorsAsWarnings = true
    options.errorprone.disable("EffectivelyPrivate")
    options.errorprone.disable("FormatStringShouldUsePlaceholders")
    options.errorprone.disable("JavaUtilDate")
    options.errorprone.disable("JavaxInjectOnAbstractMethod")
    options.errorprone.disable("StringCaseLocaleUsage")
}

gradlePlugin {
    website = "https://www.clrz.nl"
    vcsUrl = "https://github.com/colorizenl/gradle-application-plugin"

    plugins {
        applicationPlugin {
            id = "nl.colorize.gradle.application"
            implementationClass = "nl.colorize.gradle.application.ApplicationPlugin"
            displayName = "Gradle application plugin"
            description = "Build native applications for Windows, Mac, iOS, Android, and web."
            tags.set(["application", "mac", "macos", "application bundle", "windows", "msi", "exe", "pwa", "xcode"])
        }
    }
}

// Gradle has a compatibility issue with Java 17+ when running tests,
// see https://github.com/gradle/gradle/issues/18647 for details.
tasks.withType(Test).configureEach {
    jvmArgs(["--add-opens=java.base/java.lang=ALL-UNNAMED", "--add-opens=java.base/java.util=ALL-UNNAMED"])
}

task coverage(dependsOn: ["test", "jacocoTestReport"]) {
    doLast {
        def report = file("${buildDir}/reports/jacoco/test/html/index.html").text
        def loc = (report =~ "tfoot.*?bar.*?>[\\d,]+ of ([\\d,]+).*?tfoot")[0][1].replace(",", "")
        def coverage = (report =~ "tfoot.*?ctr2.*?>([\\d.]+)%.*?tfoot")[0][1]
        println "-" * 40
        println "Lines of code:    ${loc}"
        println "Test coverage:    ${coverage}%"
        file("${buildDir}/reports/coverage.yaml").text = "loc: ${loc}\ncoverage: ${coverage}\n"
    }
}
